addons/admission/admission.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: admission
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: admission-controller
  namespace: admission
spec:
  selector:
    matchLabels:
      app: admission-controller
  template:
    metadata:
      labels:
        app: admission-controller
    spec:
      restartPolicy: Always
      serviceAccountName: admission
      imagePullSecrets:
        - name: local-registry-credentials-gold
      volumes:
        - name: tls
          secret:
            secretName: admission-controller-pki
        - name: volumes
          hostPath:
            path: /var/d-k8s-volumes
            type: DirectoryOrCreate
      containers:
        - name: main
          image: todo/tool
          imagePullPolicy: Always
          volumeMounts:
            - name: tls
              mountPath: /tls
            - name: volumes
              mountPath: /volumes
  replicas: 0
---
apiVersion: v1
kind: Service
metadata:
  name: admission-controller-svc
  namespace: admission
spec:
  selector:
    app: admission-controller
  ports:
    - port: 443
      targetPort: 8000
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-controller.d-k8s.io
webhooks:
  - name: mutating-admission-controller.d-k8s.io
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: Namespaced
    clientConfig:
      service:
        namespace: admission
        name: admission-controller-svc
        path: /admission/mutate
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: IfNeeded
# TODO: this failurePolicy and commented lines are hack
# instead critical namespaces should be excluded
    failurePolicy: Ignore
#---
#apiVersion: admissionregistration.k8s.io/v1
#kind: ValidatingWebhookConfiguration
#metadata:
#  name: admission-controller.d-k8s.io
#webhooks:
#  - name: validating-admission-controller.d-k8s.io
#    rules:
#      - apiGroups: [""]
#        apiVersions: ["v1"]
#        operations: ["CREATE"]
#        resources: ["pods"]
#        scope: Namespaced
#    clientConfig:
#      service:
#        namespace: admission
#        name: admission-controller-svc
#        path: /admission/validate
#    admissionReviewVersions: ["v1"]
#    sideEffects: None
#    timeoutSeconds: 5
